<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="ua.nure.fedorenko.kidstim.activity.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/TextInputStyle"
        android:layout_marginTop="30dp"
        app:errorTextAppearance="@style/error">


        <EditText
            android:id="@+id/emailEditText"
            style="@style/EditTextStyle"
            android:layout_marginTop="70dp"
            android:drawableLeft="@drawable/lo2"
            android:drawableStart="@drawable/lo2"
            android:hint="@string/prompt_email"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/TextInputStyle"
        app:errorTextAppearance="@style/error">

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/pas1"
            android:drawableStart="@drawable/pas1"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/AccentButtonStyle"
        android:text="@string/action_sign_in" />

    <Button
        android:id="@+id/showRegisterButton"
        style="@style/BorderlessButtonStyle"
        android:text="@string/register" />
</LinearLayout>
