<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="6dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/taskDescTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/taskStatusTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/points" />

                <TextView
                    android:id="@+id/taskPointsTextView"
                    android:layout_width="match_parent"
                    android:textColor="@color/gold"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/childrenPicturesLayout"
                android:layout_height="60dp">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/showEditTaskButton"
                android:layout_width="wrap_content"
                android:textColor="@color/gold"
                style="@style/BorderlessButtonStyle"
                android:layout_height="wrap_content"
                android:text="@string/edit" />

            <Button
                android:id="@+id/deleteTaskButton"
                android:layout_width="wrap_content"
                android:textColor="@color/gold"
                style="@style/BorderlessButtonStyle"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <CheckBox
                android:id="@+id/markCompletedCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_completed" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>